fix(header/textbox): adjusted the layout and spacing of the header, and fixed some issues I had with the textbox (#2)
Had some issues with the header, the layout, and spacing were off. Did not notice at first. Now I saw and fixed it.
Also, there were some issues with the textbox, I fixed them as well.

--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ body {
     font-size: 15px;
 }
 
+.editor:focus {
+    outline: none;
+}
+
 .preview-frame {
     width: 50vw;
     height: 400px;
@@ -139,5 +143,5 @@ body {
 
 .console {
     width: 100vw;
-    height: 370px;
+    height: 340px;
 }
